Fix: Adjusted file paths for images and other files - added clippy to my level

--- a/levels/level-sage/level-sageStyle.css
+++ b/levels/level-sage/level-sageStyle.css
@@ -277,3 +277,67 @@ transition: opacity 5s ease;
     transition: opacity .7s ease;
 }
 
+
+
+/* Clippy Styling */
+
+.agent {
+    display: flex;
+    position: absolute;
+    bottom: 20.5rem; /* Change positioning of clippy */
+     right: 24rem; /* Can change bottom and right to top and left, etc.  */
+}
+
+.clippy {
+    position: fixed;
+    width: 450px; /* Can change width size accordingly */
+    height: 350px; /* Can change height size */
+}
+
+p #hint {
+    padding: 0;
+    margin: 0;
+}
+
+.speech-bubble {
+	position: absolute;
+    bottom: -30px;
+    left: 90px;
+    font-size: 16px;
+
+	background: #eee9ad;
+	border-radius: .4em;
+    border: 1px solid black;
+    width: 12rem;
+    padding: 10px;
+}
+
+.speech-bubble:after {
+	content: '';
+	position: absolute;
+	bottom: 1px;
+	left: 50%;
+	width: 0;
+	height: 0;
+	border: 33px solid transparent;
+	border-top-color: #eee9ad;
+	border-right: 0;
+	border-bottom: 0;
+	margin-left: -16.5px;
+	margin-bottom: -33px;
+}
+
+.speech-bubble:before {
+	content: '';
+	position: absolute;
+	bottom: 0.25px;
+	left: 50%;
+	width: 0;
+	height: 0;
+	border: 33px solid transparent;
+	border-top-color: black;
+	border-right: 0;
+	border-bottom: 0;
+	margin-left: -16px;
+	margin-bottom: -34.5px;
+}
